<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- slide_16_9___1 strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="text_string">Play Game</string>
	<string name="text_ek1_string">About</string>
	<string name="text_ek2_string">View Credits</string>

	<!--  slide_16_9___2 strings  -->

	<string name="date_message_string">05/09/2023</string>
	<string name="date__string">Date:</string>
	<string name="weather_message_string">Thunderstorms</string>
	<string name="weather__string">Weather:</string>
	<string name="city_message_string">City</string>
	<string name="location__string">Location:</string>
	<string name="distance_message_string">You are 0 miles from Independence</string>
	<string name="messages_go_here_string">Messages Go Here</string>
	<string name="button_5_string">Button 5</string>
	<string name="button_4_string">Button 4</string>
	<string name="button_3_string">Button 3</string>
	<string name="button_2_string">Button 2</string>
	<string name="button_1_string">Button 1</string>

	<!--  slide_16_9___2 strings  -->

	<string name="menu_string">Choose your game type</string>
	<string name="menu_ek1_string">Story Mode</string>
	<string name="advance_string">Free Play</string>

	<!--  name_pick_page strings  -->

	<string name="namemenu_string">Story Mode</string>
	<string name="namemenu_ek1_string">Story Mode</string>
	<string name="namemenu_ek2_string">Story Mode</string>
	<string name="namemenu_ek3_string">Story Mode</string>
	<string name="namemenu_ek4_string">Story Mode</string>
	<string name="advance_ek1_string">Free Play</string>
	<string name="menu_ek5_string">Pick Your Party</string>



	<string name="party_string">Party</string>
	<string name="inventory_string">Inventory</string>
	<string name="history_string">History</string>

</resources>