<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		slide_16_9___2
	 *	@date 		Thursday 04th of May 2023 08:00:56 PM
	 *	@title 		Page 1
	 *	@author
	 *	@keywords
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/slide_16_9___2"
		android:layout_width="wrap_content"
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_slide_16_9___2_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__slide_16_9___2_ek2"
					android:background="@drawable/_bg__slide_16_9___2_ek2_shape"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="960dp"
					android:layout_height="540dp" />

				<ImageView android:id="@+id/landscape7_1"
					android:src="@drawable/landscape7"
					android:contentDescription="landscape7_1"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="960dp"
					android:layout_height="540dp" />


				<RelativeLayout android:id="@+id/frame_1"
					android:layout_marginTop="17dp"
					android:layout_marginStart="19dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/date_box"
						android:background="@drawable/date_box_shape"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="316dp"
						android:layout_height="63dp" />

					<TextView android:id="@+id/date_message"
						android:fontFamily="Inter"
						android:textSize="18sp"
						android:textColor="@color/date_message_color"
						android:layout_marginLeft="10dp"
						android:layout_marginTop="28dp"
						android:layout_width="136dp"
						android:layout_height="39dp"
						android:text="@string/date_message_string"
						/>

					<TextView android:id="@+id/date_"
						android:fontFamily="Inter"
						android:textSize="18sp"
						android:textColor="@color/date_message_color"
						android:layout_marginLeft="10dp"
						android:layout_marginTop="5dp"
						android:layout_width="136dp"
						android:layout_height="39dp"
						android:text="@string/date__string"
						/>

					<TextView android:id="@+id/weather_message"
						android:fontFamily="Inter"
						android:textSize="19sp"
						android:textColor="@color/date_message_color"
						android:layout_marginLeft="151dp"
						android:layout_marginTop="27dp"
						android:layout_width="185.5dp"
						android:layout_height="39.5dp"
						android:text="@string/weather_message_string"
						/>

					<TextView android:id="@+id/weather_"
						android:fontFamily="Inter"
						android:textSize="19sp"
						android:textColor="@color/date_message_color"
						android:layout_marginLeft="151dp"
						android:layout_marginTop="4dp"
						android:layout_width="185.5dp"
						android:layout_height="39.5dp"
						android:text="@string/weather__string"
						/>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/frame_2"
					android:layout_marginTop="86dp"
					android:layout_marginStart="19dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/locaton_box"
						android:background="@drawable/locaton_box_shape"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="316dp"
						android:layout_height="63dp" />

					<TextView android:id="@+id/city_message"
						android:fontFamily="Inter"
						android:textSize="18sp"
						android:textColor="@color/date_message_color"
						android:layout_marginLeft="97dp"
						android:layout_marginTop="9dp"
						android:layout_width="136dp"
						android:layout_height="39dp"
						android:text="@string/city_message_string"
						/>

					<TextView android:id="@+id/location_"
						android:fontFamily="Inter"
						android:textSize="18sp"
						android:textColor="@color/date_message_color"
						android:layout_marginLeft="10dp"
						android:layout_marginTop="9dp"
						android:layout_width="136dp"
						android:layout_height="39dp"
						android:text="@string/location__string"
						/>

					<TextView android:id="@+id/distance_message"
						android:fontFamily="Inter"
						android:textSize="16sp"
						android:textColor="@color/date_message_color"
						android:layout_marginLeft="10dp"
						android:layout_marginTop="30dp"
						android:layout_width="318dp"
						android:layout_height="37dp"
						android:text="@string/distance_message_string"
						/>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/frame_3"
					android:layout_marginTop="465dp"
					android:layout_marginStart="754dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<Button   android:id="@+id/advance_button"
						android:background="@drawable/advance_button_shape"
						android:layout_marginStart="3dp"
						android:layout_marginTop="0dp"
						android:layout_width="180dp"
						android:layout_height="63dp"
						android:text="advance"
						android:textSize="27sp"
						android:fontFamily="@font/inter_regular"
						/>


				</RelativeLayout>


				<RelativeLayout android:id="@+id/frame_3_ek1"
					android:layout_marginTop="465dp"
					android:layout_marginStart="30dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<Button   android:id="@+id/menu_button"
						android:background="@drawable/advance_button_shape"
						android:layout_marginStart="3dp"
						android:layout_marginTop="0dp"
						android:layout_width="180dp"
						android:layout_height="63dp"
						android:text="Menu"
						android:textSize="27sp"
						android:fontFamily="@font/inter_regular"
						/>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>